Agregados html de detalles de las flores mas vendidas

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <div><h3>Las mas vendidas</h3>
         <ul>
-            <li><a href="#">Rosa</a></li>
-            <li><a href="#">Azucena</a></li>
-            <li><a href="#">Clavel</a></li>
-            <li><a href="#">Girasol</a></li>
+            <li><a href="detail_rosa.html">Rosa</a></li>
+            <li><a href="detail_azucena.html">Azucena</a></li>
+            <li><a href="detail_clavel.html">Clavel</a></li>
+            <li><a href="detail_girasol.html">Girasol</a></li>
         </ul>
     </div>
 
