--- a/form_pedido.html
+++ b/form_pedido.html
@@ -1,20 +1,41 @@
-<form action="/index.html">
-    Nombre:<br>
-    <input type="text" name="firstname" value="">
-    <br>
-    Apellido:<br>
-    <input type="text" name="lastname" value="">
-    <br>
-    Tipo de Flor: <select name="tipo_flor" id="select_flor">
-        <option value="rosa">Rosa</option>
-        <option value="girasol">Girasol</option>
-        <option value="azucena">Azucena</option>
-        <option value="clavel">Clavel</option>
-    </select>
-    <br>
-    Descripciòn:<br>
-    <input type="text" name="" id="">
-    <br><br>
-    <input type="submit" value="Enviar">
-    <button href="index.html">Volver</button>
-</form> 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</head>
+<body>
+    <form style="padding: 8em">
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Nombre</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1">
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlInput1">Apellido</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1">
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Tipo de FLor</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+            <option>Rosa</option>
+            <option>Girasol</option>
+            <option>Azucena</option>
+            <option>Clavel</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1">Descripción</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <input class="btn btn-info" type="submit" value="Enviar">
+        <a class="btn" href="index.html" role="button">Volver</a>
+    </form>
+</body>
+</html>
+
